# spec_agents

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.agent/: README.md  task-template.md  verification-template.md
.agent/lenses/: architecture-review.md  bug-fix.md  drift-audit.md  new-feature.md  planning.md  refactor.md  security-review.md
.agent/tasks/: sa-opus-4-8-migration.md  spec-agents-caching.md  spec-agents-conftest.md  spec-agents-lens-validator.md  spec-agents-parallel.md  spec-agents-pyright-config-fix.md  spec-agents-pyright-pin.md  spec-agents-version-bump.md  usage-cost-fn.md
.agent/verifications/: sa-opus-4-8-migration.md  spec-agents-caching.md  spec-agents-conftest.md  spec-agents-lens-validator.md  spec-agents-parallel.md  spec-agents-pyright-config-fix.md  spec-agents-pyright-pin.md  spec-agents-version-bump.md  usage-cost-fn.md
.github/workflows/: ci.yml
docs/: CONVENTIONS.md  CURRENT_STATE.md  SPRINTS.md
scripts/: bump_consumers.py  check_agent_task_spec.sh  check_current_state_drift.py
src/spec_agents/: __init__.py  caching.py  logging.py  messages.py  usage.py
src/spec_agents/agents/: __init__.py  critic.py  parallel.py  plan_then_act.py  verifiers.py
src/spec_agents/eval/: __init__.py  batch.py  runner.py
tests/: conftest.py  test_adapter.py  test_batch.py  test_caching.py  test_critic.py  test_eval.py  test_imports.py  test_lenses.py  test_messages.py  test_parallel.py  test_plan_then_act.py  test_testing_db.py  test_usage.py  test_verifiers.py
(+8 files in other folders)
