[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spec-agents"
version = "0.7.0"
description = "Reusable agent + adapter primitives extracted from spectacular/spec_report"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.92.0",
    "requests>=2.32.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/spec_agents"]

[tool.pyright]
include = ["src"]
strict = []  # pyright wants an array of paths here, not a boolean. Empty
             # = no paths in strict mode (matches current default-mode behavior).
             # See planning/architecture-reviews/2026-05-28-autonomous-run-findings.md §1.
pythonVersion = "3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
